Fix some layout issues

--- a/www/include/css/step1.css
+++ b/www/include/css/step1.css
@@ -257,6 +257,17 @@ input.password {
     line-height:1.3em;
 }
 
+
+#sign-titre7-15{
+    width:170px;
+    margin:0 auto;
+    padding-top:0px;
+    float:left;
+    height:16px;
+    padding-left: 15px;
+    line-height:1.3em;
+}
+
 #champs1{
     width:258px;
     height:16px;
